--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html>
+<head>
+	<title> Alex Chiu's Personal Site </title>
+	<link rel="stylesheet" type="text/css" href="theme.css"> 
+	<base href="https://github.com/pkpklong/" target="_self">
+	<meta charset="UTF-8">
+	<meta name="description" content="Alex Chiu's Test Site">
+	<meta name="author" content="Alex Chiu">
+</head>
 <body>
-<h1> Hello World </h1>
+	<class="BigPicture"></class>
 </body>
 </html>
+	
