--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<meta name="author" content="Alex Chiu">
 </head>
 <body>
-	<class="BigPicture"></class>
+	<class="BigPicture">Hi people</class>
 </body>
 </html>
 	
