--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title> Alex Chiu's Personal Site </title>
-	<base href="https://github.com/pkpklong/" target="_self">
+	<base href="https://github.com/pkpklong/pkpklong.github.io/blob/master/" target="_self">
 	<link rel="stylesheet" type="text/css" href="theme.css">
 	<meta charset="UTF-8">
 	<meta name="description" content="Alex Chiu's Test Site">
