--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
 	<meta name="description" content="Alex Chiu's Test Site">
 	<meta name="author" content="Alex Chiu">
 </head>
+<style>
+	.BigPicture{
+		background-color: black;
+		margin: 20px;
+		padding: 20px;
+		width: 300px;
+	}
+</style>
 <body>
 	<p>Hi</p>
 	<class="BigPicture">Hi people</class>
