--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<meta name="author" content="Alex Chiu">
 </head>
 <style>
-	.BigPicture{
+	div.BigPicture{
 		background-color: black;
 		margin: 20px;
 		padding: 20px;
@@ -18,7 +18,7 @@
 </style>
 <body>
 	<p>Hi</p>
-	<class="BigPicture">Hi people</class>
+	<div class="BigPicture">Hi people</div>
 </body>
 </html>
 	
