--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <style>
 	div.BigPicture{
 		background-color: black;
+		color: white;
 		margin: 20px;
 		padding: 20px;
 		width: 100%;
@@ -18,7 +19,9 @@
 </style>
 <body>
 	<p>Hi</p>
-	<div class="BigPicture">Hi people</div>
+	<div class="BigPicture">
+		<h1>BigPicture</h1>
+	</div>
 </body>
 </html>
 	
