--- a/index.html
+++ b/index.html
@@ -11,17 +11,12 @@
 <style>
 	div.BigPicture{
 		background-color: black;
-		color: white;
-		margin: 20px;
-		padding: 20px;
 		width: 100%;
 	}
 </style>
 <body>
 	<p>Hi</p>
-	<div class="BigPicture">
-		<h1>BigPicture</h1>
-	</div>
+	<div class="BigPicture">Hi people</div>
 </body>
 </html>
 	
