--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
 	}
 </style>
 <body>
-	<p>Hi</p>
-	<div class="BigPicture">Hi people</div>
+	<div class="BigPicture">
+		<h1>BigPicture1</h1>
+	</div>
 </body>
 </html>
 	
