--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 <style>
 	div.BigPicture{
 		background-color: black;
-		margin: -20px;
+		margin-left: -20px;
+		margin-right: +20px;
 		width: 100%;
 	}
 </style>
